# dstoolkit-text2sql-and-imageprocessing

./: .funcignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  (+1 more)
deploy_ai_search/: .env  .env.example  README.md  ai_search.py  deploy.py  environment.py  pyproject.toml  rag_documents.py  rag_documents_old.py  requirements.txt  text2sql.py  text_2_sql.py  text_2_sql_column_value_store.py  text_2_sql_query_cache.py  text_2_sql_schema_store.py
deploy_ai_search/src/deploy_ai_search/: README.md  ai_search.py  deploy.py  environment.py  image_processing.py  rag_documents.py  text_2_sql_column_value_store.py  text_2_sql_schema_store.py
deploy_ai_search_indexes/: .env.example  README.md  pyproject.toml
deploy_ai_search_indexes/src/deploy_ai_search_indexes/: ai_search.py  deploy.py  environment.py  image_processing.py  text_2_sql_query_cache.py
image_processing/: .coveragerc  .env.example  GETTING_STARTED.md  README.md  figure_analysis.py  function_app.py  layout_analysis.py  layout_holders.py  mark_up_cleaner.py  pyproject.toml  pytest.ini  requirements.txt  semantic_text_chunker.py  storage_account.py
image_processing/src/image_processing/: .funcignore  figure_analysis.py  function_app.py  host.json  layout_analysis.py  layout_and_figure_merger.py  layout_holders.py  local.settings.json  mark_down_cleaner.py  mark_up_cleaner.py  requirements.txt  semantic_text_chunker.py
image_processing/tests/image_processing/: test_figure_analysis.py  test_figure_app.py  test_layout_analysis.py  test_layout_and_figure_merger.py  test_layout_holders.py  test_mark_up_cleaner.py  test_semantic_text_chunker.py
text_2_sql/autogen/: .env.example  Iteration 5 - Agentic Vector Based Text2SQL.ipynb  README.md  agentic_text_2_sql.ipynb  agentic_text_2_sql.py  agents.py  evaluate_autogen_text2sql.ipynb  llm_model_creator.py  pyproject.toml  qna_agents.py  requirements.txt  selector.py  sql_tools.py  sql_tools_and_agents.py
text_2_sql/autogen/agents/: answer_agent.yaml  question_decomposition_agent.yaml  sql_query_cache_agent.yaml  sql_query_correction_agent.yaml  sql_query_generation_agent.yaml  sql_schema_selection_agent.yaml
text_2_sql/autogen/agents/custom_agents/: parallel_sql_flow_agent.py  sql_query_cache_agent.py  sql_schema_extraction_agent.py
text_2_sql/autogen/agents/llm_agents/: answer_agent.yaml  question_decomposition_agent.yaml  sql_query_correction_agent.yaml  sql_query_generation_agent.yaml  sql_schema_selection_agent.yaml
text_2_sql/autogen/custom_agents/: sql_query_cache_agent.py
text_2_sql/autogen/llm_agents/: question_decomposition_agent.yaml  sql_query_correction_agent.yaml  sql_query_generation_agent.yaml  sql_schema_selection_agent.yaml
text_2_sql/autogen/prompts/: answer_agent.yaml  question_decomposition_agent.yaml  sql_query_cache_agent.yaml  sql_query_correction_agent.yaml  sql_query_generation_agent.yaml  sql_schema_selection_agent.yaml
text_2_sql/autogen/src/autogen/: autogen_text_2_sql.py
text_2_sql/autogen/src/autogen/creators/: llm_agent_creator.py
text_2_sql/autogen/src/autogen_text_2_sql/: __init__.py  autogen_text_2_sql.py  evaluation_utils.py  inner_autogen_text_2_sql.py  state_store.py  test.py
text_2_sql/autogen/src/autogen_text_2_sql/creators/: llm_agent_creator.py  llm_model_creator.py
text_2_sql/autogen/src/autogen_text_2_sql/custom_agents/: answer_and_sources_agent.py  date_disambiguation_agent.py  parallel_query_solving_agent.py  sources_agent.py  sql_query_cache_agent.py  sql_schema_selection_agent.py
text_2_sql/autogen/utils/: agent_creator.py  ai_search.py  llm_agent_creator.py  llm_model_creator.py  models.py  prompts.py  sql.py  sql_utils.py
text_2_sql/semantic_kernel/: .env  Iteration 2 - Prompt Based Text2SQL.ipynb  Iterations 3 & 4 - Vector Based Text2SQL.ipynb  README.md  prompt.yaml  pyproject.toml  rag_with_ai_search_and_text_2_sql.ipynb  rag_with_vector_based_text_2_sql.ipynb  requirements.txt  time_comparison_script.py
text_2_sql/semantic_kernel/plugins/ai_search_plugin/: ai_search_plugin.py
text_2_sql/semantic_kernel/plugins/prompt_based_sql_plugin/: prompt_based_sql_plugin.py
text_2_sql/semantic_kernel/plugins/vector_based_sql_plugin/: vector_based_sql_plugin.py
text_2_sql/text_2_sql_core/: README.md  pyproject.toml  requirements.txt
text_2_sql/text_2_sql_core/src/text_2_sql_core/connectors/: ai_search.py  databricks_sql.py  factory.py  open_ai.py  postgres_sql.py  postgresql_sql.py  snowflake_sql.py  sql.py  sqlite_sql.py  tsql_sql.py
text_2_sql/text_2_sql_core/src/text_2_sql_core/custom_agents/: sql_query_cache_agent.py  sql_schema_selection_agent.py
text_2_sql/text_2_sql_core/src/text_2_sql_core/data_dictionary/: cli.py  data_dictionary_creator.py  databricks_data_dictionary_creator.py  postgres_data_dictionary_creator.py  postgresql_data_dictionary_creator.py  snowflake_data_dictionary_creator.py  sqlite_data_dictionary_creator.py  tsql_data_dictionary_creator.py
text_2_sql/text_2_sql_core/src/text_2_sql_core/payloads/: __init__.py  agent_request_response_pair.py  agent_response.py  answer_with_sources.py  chat_history.py  interaction_payloads.py  processing_update.py  user_information_request.py
text_2_sql/text_2_sql_core/src/text_2_sql_core/prompts/: answer_agent.yaml  answer_agent_with_follow_up_questions.yaml  answer_with_follow_up_questions_agent.yaml  answer_with_follow_up_suggestions_agent.yaml  date_disambiguation_agent.yaml  disambiguation_and_sql_query_generation_agent.yaml  load.py  query_rewrite_agent.yaml  question_decomposition_agent.yaml  question_rewrite_agent.yaml  sql_disambiguation_agent.yaml  sql_query_correction_agent.yaml  sql_query_generation_agent.yaml  sql_schema_selection_agent.yaml  user_input_rewrite_agent.yaml  user_message_rewrite_agent.yaml
text_2_sql/text_2_sql_core/src/text_2_sql_core/structured_outputs/: __init__.py  answer_agent.py  answer_agent_with_follow_up_questions.py  answer_with_follow_up_questions_agent.py  answer_with_follow_up_suggestions_agent.py  (+2 more)
(+263 files in other folders)
