[project]
name = "dstoolkit-text2sql-and-imageprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
]

[tool.uv.workspace]
members = ["text_2_sql/text_2_sql_core", "text_2_sql/autogen"]
