[project]
name = "dstoolkit-text2sql-and-imageprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "text-2-sql-core[sqlite]",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "pygments>=2.18.0",
    "ruff>=0.8.1",
    "python-dotenv>=1.0.1",
]

[tool.uv.workspace]
members = ["text_2_sql/text_2_sql_core", "text_2_sql/autogen", "deploy_ai_search_indexes", "image_processing", "text_2_sql/semantic_kernel"]

[tool.uv.sources]
text-2-sql-core = { workspace = true }
