[project]
name = "deploy-ai-search"
version = "0.1.0"
description = "Helper functions to deploy Azure AI Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.19.0",
    "azure-mgmt-web>=7.3.1",
    "azure-search-documents==11.6.0b8",
    "azure-storage-blob>=12.24.0",
    "python-dotenv>=1.0.1",
    "text_2_sql_core",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "pygments>=2.18.0",
    "ruff>=0.8.1",
    "python-dotenv>=1.0.1",
]

[tool.uv.sources]
text_2_sql_core = { workspace = true }

[project.optional-dependencies]
snowflake = [
    "text_2_sql_core[snowflake]",
]
databricks = [
    "text_2_sql_core[databricks]",
]
postgresql = [
    "text_2_sql_core[postgresql]",
]
sqlite = [
    "text_2_sql_core[sqlite]",
]
