[project]
name = "image_processing"
version = "0.2.0"
description = "Image processing for documents with Document Intelligence and OpenAI"
readme = "README.md"
authors = [
    { name = "Ben Constable", email = "benconstable@microsoft.com" }
]
requires-python = ">=3.11"
dependencies = [
    "azure-functions>=1.21.3",
    "azure-identity>=1.19.0",
    "azure-search-documents>=11.6.0b8",
    "azure-search>=1.0.0b2",
    "azure-storage-blob>=12.24.0",
    "bs4>=0.0.2",
    "openai>=1.55.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "regex>=2024.11.6",
    "tenacity>=9.0.0",
    "azure-ai-documentintelligence==1.0.0",
    "azure-ai-textanalytics>=5.3.0",
    "azure-ai-vision-imageanalysis>=1.0.0",
    "pymupdf>=1.24.14",
    "aiohttp>=3.11.9",
    "pillow>=11.0.0",
    "numpy<2.0.0",
    "spacy>=3.7.5",
    "tiktoken>=0.8.0",
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1.tar.gz",
    "model2vec>=0.3.5",
    "pydantic>=2.10.5",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "pygments>=2.18.0",
    "ruff>=0.8.1",
    "python-dotenv>=1.0.1",
    "coverage>=7.6.12",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
