[project]
name = "autogen_text_2_sql"
version = "0.1.0"
description = "AutoGen Based Implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat==0.4.0.dev7",
    "autogen-core==0.4.0.dev7",
    "autogen-ext[azure,openai]==0.4.0.dev7",
    "grpcio>=1.68.1",
    "pyyaml>=6.0.2",
    "text_2_sql_core",
]

[dependency-groups]
dev = [
    "autogen-text-2-sql",
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "pygments>=2.18.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.1",
]

[tool.uv.sources]
text_2_sql_core = { workspace = true }
