[project]
name = "autogen_text_2_sql"
version = "0.2.0"
description = "AutoGen Based Implementation"
readme = "README.md"
authors = [
    { name = "Ben Constable", email = "benconstable@microsoft.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiostream>=0.6.4",
    "autogen-agentchat==0.4.7",
    "autogen-core==0.4.7",
    "autogen-ext[azure,openai]==0.4.7",
    "grpcio>=1.68.1",
    "pyyaml>=6.0.2",
    "text_2_sql_core",
    "sqlparse>=0.4.4",
    "nltk>=3.8.1",
    "cachetools>=5.5.1",
    "azure-cosmos>=4.9.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "pygments>=2.18.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.1",
]

[tool.uv.sources]
text_2_sql_core = { workspace = true }

[project.optional-dependencies]
snowflake = [
    "text_2_sql_core[snowflake]",
]
databricks = [
    "text_2_sql_core[databricks]",
]
postgres = [
    "text_2_sql_core[postgres]",
]
sqlite = [
    "text_2_sql_core[sqlite]",
]
