[project]
name = "semantic_kernel_text_2_sql"
version = "0.1.0"
description = "Semantic Kernel Based Implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.68.1",
    "semantic-kernel==1.9.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "pygments>=2.18.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.1",
]

[tool.uv.sources]
text_2_sql_core = { path = "text_2_sql/text_2_sql_core" }
