[project]
name = "text-2-sql-core"
version = "0.1.0"
description = "Core Functionality for Text to SQL"
readme = "README.md"
authors = [
    { name = "Ben Constable", email = "benconstable@microsoft.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aioodbc>=0.5.0",
    "azure-identity>=1.19.0",
    "networkx>=3.4.2",
    "openai>=1.55.3",
    "pydantic>=2.10.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
snowflake = [
    "snowflake-connector-python>=3.12.3",
]
databricks = [
    "databricks>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
