[project]
name = "text_2_sql_core"
version = "0.2.0"
description = "Core Functionality for Text to SQL"
readme = "README.md"
authors = [
    { name = "Ben Constable", email = "benconstable@microsoft.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "aioodbc>=0.5.0",
    "azure-identity>=1.19.0",
    "azure-search>=1.0.0b2",
    "azure-search-documents==11.6.0b8",
    "jinja2>=3.1.4",
    "networkx>=3.4.2",
    "numpy<2.0.0",
    "openai>=1.55.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "sqlglot[rs]>=25.32.1",
    "tabulate>=0.9.0",
    "tenacity>=9.0.0",
    "typer>=0.14.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "pygments>=2.18.0",
    "ruff>=0.8.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
snowflake = [
    "snowflake-connector-python>=3.12.3",
]
databricks = [
    "databricks-sql-connector>=3.0.1",
    "pyarrow>=14.0.2,<17",
]
postgres = [
    "psycopg>=3.2.3",
]
sqlite = [
    "aiosqlite>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
data_dictionary = "text_2_sql_core.data_dictionary.cli:cli"
